src/dats.output
Terminals unused in grammar

    C4_NK
    D4_NK
    E4_NK
    F4_NK
    G4_NK
    A4_NK
    B4_NK
    C5_NK
    D5_NK
    E5_NK
    F5_NK
    G5_NK
    A5_NK
    B5_NK
    K_NK


State 16 conflicts: 1 shift/reduce


Grammar

    0 $accept: file_struct $end

    1 file_struct: bpm beginning note D_END end_line

    2 bpm: %empty
    3    | K_BPM SP V_BPM end_line

    4 note: K_NL SP note_length SP note_key with_or_without_sp end_line
    5     | K_NL SP note_length SP note_key with_or_without_sp end_line note

    6 end_line: EOL
    7         | EOL end_line

    8 beginning: with_or_without_sp_endl D_BEG with_or_without_sp_endl

    9 with_or_without_sp_endl: %empty
   10                        | SP with_or_without_sp_endl
   11                        | EOL with_or_without_sp_endl

   12 with_or_without_sp: %empty
   13                   | SP with_or_without_sp

   14 note_length: V1_NL
   15            | V2_NL
   16            | V4_NL
   17            | V8_NL
   18            | V16_NL

   19 note_key: C3_NK
   20         | D3_NK
   21         | E3_NK
   22         | F3_NK
   23         | G3_NK
   24         | A3_NK
   25         | B3_NK


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    D_BEG (258) 8
    D_END (259) 1
    K_BPM (260) 3
    V_BPM <val_in> (261) 3
    C3_NK (262) 19
    D3_NK (263) 20
    E3_NK (264) 21
    F3_NK (265) 22
    G3_NK (266) 23
    A3_NK (267) 24
    B3_NK (268) 25
    C4_NK (269)
    D4_NK (270)
    E4_NK (271)
    F4_NK (272)
    G4_NK (273)
    A4_NK (274)
    B4_NK (275)
    C5_NK (276)
    D5_NK (277)
    E5_NK (278)
    F5_NK (279)
    G5_NK (280)
    A5_NK (281)
    B5_NK (282)
    K_NL (283) 4 5
    K_NK (284)
    V1_NL (285) 14
    V2_NL (286) 15
    V4_NL (287) 16
    V8_NL (288) 17
    V16_NL (289) 18
    EOL (290) 6 7 11
    SP (291) 3 4 5 10 13


Nonterminals, with rules where they appear

    $accept (37)
        on left: 0
    file_struct (38)
        on left: 1
        on right: 0
    bpm (39)
        on left: 2 3
        on right: 1
    note (40)
        on left: 4 5
        on right: 1 5
    end_line (41)
        on left: 6 7
        on right: 1 3 4 5 7
    beginning (42)
        on left: 8
        on right: 1
    with_or_without_sp_endl (43)
        on left: 9 10 11
        on right: 8 10 11
    with_or_without_sp (44)
        on left: 12 13
        on right: 4 5 13
    note_length <val_in> (45)
        on left: 14 15 16 17 18
        on right: 4 5
    note_key <val_double> (46)
        on left: 19 20 21 22 23 24 25
        on right: 4 5


State 0

    0 $accept: . file_struct $end

    K_BPM  shift, and go to state 1

    $default  reduce using rule 2 (bpm)

    file_struct  go to state 2
    bpm          go to state 3


State 1

    3 bpm: K_BPM . SP V_BPM end_line

    SP  shift, and go to state 4


State 2

    0 $accept: file_struct . $end

    $end  shift, and go to state 5


State 3

    1 file_struct: bpm . beginning note D_END end_line

    EOL  shift, and go to state 6
    SP   shift, and go to state 7

    $default  reduce using rule 9 (with_or_without_sp_endl)

    beginning                go to state 8
    with_or_without_sp_endl  go to state 9


State 4

    3 bpm: K_BPM SP . V_BPM end_line

    V_BPM  shift, and go to state 10


State 5

    0 $accept: file_struct $end .

    $default  accept


State 6

   11 with_or_without_sp_endl: EOL . with_or_without_sp_endl

    EOL  shift, and go to state 6
    SP   shift, and go to state 7

    $default  reduce using rule 9 (with_or_without_sp_endl)

    with_or_without_sp_endl  go to state 11


State 7

   10 with_or_without_sp_endl: SP . with_or_without_sp_endl

    EOL  shift, and go to state 6
    SP   shift, and go to state 7

    $default  reduce using rule 9 (with_or_without_sp_endl)

    with_or_without_sp_endl  go to state 12


State 8

    1 file_struct: bpm beginning . note D_END end_line

    K_NL  shift, and go to state 13

    note  go to state 14


State 9

    8 beginning: with_or_without_sp_endl . D_BEG with_or_without_sp_endl

    D_BEG  shift, and go to state 15


State 10

    3 bpm: K_BPM SP V_BPM . end_line

    EOL  shift, and go to state 16

    end_line  go to state 17


State 11

   11 with_or_without_sp_endl: EOL with_or_without_sp_endl .

    $default  reduce using rule 11 (with_or_without_sp_endl)


State 12

   10 with_or_without_sp_endl: SP with_or_without_sp_endl .

    $default  reduce using rule 10 (with_or_without_sp_endl)


State 13

    4 note: K_NL . SP note_length SP note_key with_or_without_sp end_line
    5     | K_NL . SP note_length SP note_key with_or_without_sp end_line note

    SP  shift, and go to state 18


State 14

    1 file_struct: bpm beginning note . D_END end_line

    D_END  shift, and go to state 19


State 15

    8 beginning: with_or_without_sp_endl D_BEG . with_or_without_sp_endl

    EOL  shift, and go to state 6
    SP   shift, and go to state 7

    $default  reduce using rule 9 (with_or_without_sp_endl)

    with_or_without_sp_endl  go to state 20


State 16

    6 end_line: EOL .
    7         | EOL . end_line

    EOL  shift, and go to state 16

    EOL       [reduce using rule 6 (end_line)]
    $default  reduce using rule 6 (end_line)

    end_line  go to state 21


State 17

    3 bpm: K_BPM SP V_BPM end_line .

    $default  reduce using rule 3 (bpm)


State 18

    4 note: K_NL SP . note_length SP note_key with_or_without_sp end_line
    5     | K_NL SP . note_length SP note_key with_or_without_sp end_line note

    V1_NL   shift, and go to state 22
    V2_NL   shift, and go to state 23
    V4_NL   shift, and go to state 24
    V8_NL   shift, and go to state 25
    V16_NL  shift, and go to state 26

    note_length  go to state 27


State 19

    1 file_struct: bpm beginning note D_END . end_line

    EOL  shift, and go to state 16

    end_line  go to state 28


State 20

    8 beginning: with_or_without_sp_endl D_BEG with_or_without_sp_endl .

    $default  reduce using rule 8 (beginning)


State 21

    7 end_line: EOL end_line .

    $default  reduce using rule 7 (end_line)


State 22

   14 note_length: V1_NL .

    $default  reduce using rule 14 (note_length)


State 23

   15 note_length: V2_NL .

    $default  reduce using rule 15 (note_length)


State 24

   16 note_length: V4_NL .

    $default  reduce using rule 16 (note_length)


State 25

   17 note_length: V8_NL .

    $default  reduce using rule 17 (note_length)


State 26

   18 note_length: V16_NL .

    $default  reduce using rule 18 (note_length)


State 27

    4 note: K_NL SP note_length . SP note_key with_or_without_sp end_line
    5     | K_NL SP note_length . SP note_key with_or_without_sp end_line note

    SP  shift, and go to state 29


State 28

    1 file_struct: bpm beginning note D_END end_line .

    $default  reduce using rule 1 (file_struct)


State 29

    4 note: K_NL SP note_length SP . note_key with_or_without_sp end_line
    5     | K_NL SP note_length SP . note_key with_or_without_sp end_line note

    C3_NK  shift, and go to state 30
    D3_NK  shift, and go to state 31
    E3_NK  shift, and go to state 32
    F3_NK  shift, and go to state 33
    G3_NK  shift, and go to state 34
    A3_NK  shift, and go to state 35
    B3_NK  shift, and go to state 36

    note_key  go to state 37


State 30

   19 note_key: C3_NK .

    $default  reduce using rule 19 (note_key)


State 31

   20 note_key: D3_NK .

    $default  reduce using rule 20 (note_key)


State 32

   21 note_key: E3_NK .

    $default  reduce using rule 21 (note_key)


State 33

   22 note_key: F3_NK .

    $default  reduce using rule 22 (note_key)


State 34

   23 note_key: G3_NK .

    $default  reduce using rule 23 (note_key)


State 35

   24 note_key: A3_NK .

    $default  reduce using rule 24 (note_key)


State 36

   25 note_key: B3_NK .

    $default  reduce using rule 25 (note_key)


State 37

    4 note: K_NL SP note_length SP note_key . with_or_without_sp end_line
    5     | K_NL SP note_length SP note_key . with_or_without_sp end_line note

    SP  shift, and go to state 38

    $default  reduce using rule 12 (with_or_without_sp)

    with_or_without_sp  go to state 39


State 38

   13 with_or_without_sp: SP . with_or_without_sp

    SP  shift, and go to state 38

    $default  reduce using rule 12 (with_or_without_sp)

    with_or_without_sp  go to state 40


State 39

    4 note: K_NL SP note_length SP note_key with_or_without_sp . end_line
    5     | K_NL SP note_length SP note_key with_or_without_sp . end_line note

    EOL  shift, and go to state 16

    end_line  go to state 41


State 40

   13 with_or_without_sp: SP with_or_without_sp .

    $default  reduce using rule 13 (with_or_without_sp)


State 41

    4 note: K_NL SP note_length SP note_key with_or_without_sp end_line .
    5     | K_NL SP note_length SP note_key with_or_without_sp end_line . note

    K_NL  shift, and go to state 13

    $default  reduce using rule 4 (note)

    note  go to state 42


State 42

    5 note: K_NL SP note_length SP note_key with_or_without_sp end_line note .

    $default  reduce using rule 5 (note)
